--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 REACT_APP_MOVIEDB_BASE_URL=https://api.themoviedb.org/3
+REACT_APP_MOVIEDB_IMAGE_BASE_URL=https://image.tmdb.org/t/p/w500
 REACT_APP_MOVIEDB_API_ACCESS_TOKEN=YOUR_MOVIEDB_API_ACCESS_TOKEN
