--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.3.0",
 		"react-dom": "^16.13.1",
+		"react-loading-skeleton": "^2.1.1",
 		"react-player": "^2.6.2",
 		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
-		"react-svg": "^11.0.40",
 		"redux": "^4.0.5",
 		"redux-saga": "^1.1.3",
 		"reselect": "^4.0.0"
