--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"date-fns": "^2.16.1",
 		"node-sass": "^4.14.1",
 		"react": "^16.13.1",
+		"react-autosuggest": "^10.0.2",
 		"react-bootstrap": "^1.3.0",
 		"react-dom": "^16.13.1",
 		"react-loading-skeleton": "^2.1.1",
